# SeizurePredictionThesis

./: .gitignore  config.py  main.py  pyproject.toml  readme.md  requirements.txt  window_cutter.py
config/: constants.py  durations.ipynb  intervals.py  paths.py
data_cleaning/: annotations_to_csv.py  combine_annotations.ipynb  combine_annotations.py  convert_txt_annotations.py  copy_uneeg_data.py  data_checks.py  data_handling.ipynb  file_correction.py  list_rename_move_edf_data.py  main.py  patient_timezones.ipynb  remove_P4Hk23M7L_files_from_2000.py  rename_and_move_edf_data.py
feature_extraction/: autocorrelation.ipynb  batch_features.ipynb  extract_features.py  spectral_bandpower.ipynb
models/: CNN.ipynb  FB_MLP.ipynb  FB_MLP.py  MLP.ipynb  load_data.py  train_test_splitting.ipynb
preprocessing/: batch_features.ipynb  combine_annotations.py  estimate_seizure_starts.py  extract_features.py  main.py  segment_tables.py  spectral_bandpower.ipynb  train_test_allocation.ipynb  train_test_allocation.py  train_test_split.py  valid_patients.py  validate_patients.py  window_cutter.py  window_tables.py  window_tables_old.py
sandbox/: CNN.ipynb  autocorrelation.ipynb  clip_cutter.ipynb  combine_annotations.ipynb  edf_sandbox.ipynb  features_to_series.ipynb  jupyter_testing.ipynb  patient_timezones.ipynb  sandbox.ipynb  show_file_names.py  successive_recordings.ipynb  tensorflow_testing.ipynb  time_writer.py  train_test_split.ipynb
scripts/: check_duplicate_seizures.py  check_edf_channel_names.py  compare_all_seizures.ipynb  copy_uneeg_data.py  generate_fake_data.py  (+4 more)
(+26 files in other folders)
